@@ -1,5 +1,5 @@
 <!--
-$Id: Changelog.htm,v 1.64 2015-07-06 17:34:28 fyurisich Exp $
+$Id: Changelog.htm,v 1.65 2015-07-13 22:01:13 fyurisich Exp $
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
@@ -142,6 +142,13 @@ CHANGELOG</div>
 </div>
 <div id="winchm_template_content">
 <pre>
+2015-07-13 19:00 UTC-0300 Fernando Yurisich &lt;fyurisich@oohg.org&gt;
+   * source/c_windows.c
+     ! Method TWindow:SaveAs() truncates window's captured image for
+       Win 8.1 because function _GETBITMAP() it's not aware of extended
+       frame bounds.
+     ! Method TWindow:SaveAs() saves incorrect area.
+
 2015-07-06 17:34 UTC-0300 Fernando Yurisich &lt;fyurisich@oohg.org&gt;
    * include/i_windefs.ch
      + COLOR_MENUHILIGHT and COLOR_MENUBAR
